BusOne01/src/objects/Child_Account_vod__c.object
<CustomObject>
    <fields>
        <fullName>BOT_Account_Type__c</fullName>
        <formula>if(Child_Account_vod__r.RecordType.Name==&apos;BOT Person Account&apos;,&apos;Person Account&apos;, if(Child_Account_vod__r.RecordType.Name==&apos;Specialty Provider&apos;,&apos;Specialty Provider&apos;,&apos;Business Account&apos;))</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Entity_ID__c</fullName>
        <description>To store the BOT Entity ID. It is used for BOT internal reference.</description>
        <label>Entity ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Personnel_ID__c</fullName>
        <description>To store BOT Person Account ID. It is used for BOT internal reference.</description>
        <label>Personnel ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Title__c</fullName>
        <description>Used to store the Key Person Title.</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>